--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,13 +4,13 @@ orbs:
 jobs:
   test:
     docker:
-      - image: 'circleci/node@5.0.2'
+      - image: 'cimg/node:17.8.0-browsers'
     steps:
       - checkout
       - run: npm install && npm test
-  build_deploy:
+  deploy:
     docker:
-      - image: 'circleci/node@5.0.2'
+      - image: 'cimg/node:17.8.0-browsers'
     steps:
       - checkout
       - run: npm install && npm run build
@@ -28,4 +28,4 @@ workflows:
   test_build_deploy:
     jobs:
       - test
-      - build_deploy
+      - deploy
