--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,16 +8,16 @@ jobs:
     steps:
       - checkout
       - run: npm install && npm test
-  deploy:
+  +deploy:
     docker:
       - image: 'cimg/node:17.8.0-browsers'
     steps:
       - checkout
       - run: npm install && npm run build
       - aws-s3/sync:
-        arguments: |
-          --acl public-read \
-          --cache-control "max-age=86400"
+          arguments: |
+            --acl public-read \
+            --cache-control "max-age=86400"
           from: build
           to: 's3://ci-cdtaller'
       - aws-s3/copy:
