--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,14 +18,19 @@ jobs:
           arguments: |
             --acl public-read \
             --cache-control "max-age=86400"
+          aws-access-key-id: AWS_ACCESS_KEY_ID
+          aws-region: AWS_REGION
+          aws-secret-access-key: AWS_SECRET_ACCESS_KEY
           from: build
           to: 's3://ci-cdtaller'
       - aws-s3/copy:
           arguments: '--dryrun'
-          from: bucket/build_asset.txt
-          to: 's3://my-s3-bucket-name'
+          from: build
+          to: 's3://ci-cdtaller'
 workflows:
   test_build_deploy:
     jobs:
       - test
-      - deploy
+      - deploy:
+        requires:
+          - test
