--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
             --acl public-read \
             --cache-control "max-age=86400"
           aws-access-key-id: AWS_ACCESS_KEY_ID
-          aws-region: AWS_REGION
+          aws-region: 'us‑east‑1'
           aws-secret-access-key: AWS_SECRET_ACCESS_KEY
           from: build
           to: 's3://ci-cdtaller'
