--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,13 +4,13 @@ orbs:
 jobs:
   test:
     docker:
-      - image: 'cimg/node:17.8.0-browsers'
+      - image: 'cimg/node:17.8.0'
     steps:
       - checkout
       - run: npm install && npm test
   deploy:
     docker:
-      - image: 'cimg/node:17.8.0-browsers'
+      - image: 'cimg/node:17.8.0'
     steps:
       - checkout
       - run: npm install && npm run build
@@ -18,10 +18,6 @@ jobs:
           arguments: |
             --acl public-read \
             --cache-control "max-age=86400"
-          from: build
-          to: 's3://ci-cdtaller'
-      - aws-s3/copy:
-          arguments: '--dryrun'
           from: build
           to: 's3://ci-cdtaller'
 workflows:
