Adición de filtro

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,3 +27,7 @@ workflows:
       - deploy:
           requires:
             - test
+          filters:
+            branches:
+              only:
+                - production
